// Vitest Snapshot v1

exports[`report > cl_1 1`] = `
DealReport {
  "adminID": "0001",
  "orderID": "1",
  "reply": "Something",
  "reported": "已封禁",
}
`;

exports[`report > cl_2 1`] = `
DealReport {
  "adminID": "0001",
  "orderID": "1",
  "reply": "",
  "reported": "待处理",
}
`;

exports[`report > cl_3 1`] = `
DealReport {
  "adminID": "0001",
  "orderID": "1",
  "reply": "Something",
  "reported": "已驳回",
}
`;

exports[`report > cl_4 1`] = `
DealReport {
  "adminID": "0001",
  "orderID": "1",
  "reply": "",
  "reported": "已驳回",
}
`;
